--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Api ex 1</title>
+    <title>Api ex 2</title>
   </head>
 
   <body onload="onload()">
@@ -248,7 +248,7 @@
         <div class="col-3" id="gpa">gpa</div>
       </div>
       <div class="row">
-        <div class="col-3"><b>Id:</b></div>
+        <div class="col-3"><b>Image:</b></div>
         <div class="col">
           <img src="asset/images/default.jpg" alt="default image" id="image" />
         </div>
