--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           class="btn btn-light text-dark me-2"
           id="searchButton"
         >
-          Login
+          Search
         </button>
         <button type="button" class="btn btn-primary">
           กดมาแล้ว <span class="badge bg-danger" id="count">0</span>
