--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Api ex 2</title>
+    <title>Api ex 4</title>
   </head>
 
   <body onload="onload()">
@@ -211,10 +211,14 @@
             <button type="button" class="btn btn-primary" id="addButton">
               Submit
             </button>
+            <button type="button" class="btn btn-primary" id="changeButton">
+              Change
+            </button>
           </div>
         </div>
       </div>
     </div>
+
     <div id="output">
       <table class="table table-striped table-hover">
         <thead>
@@ -224,6 +228,7 @@
             <th scope="col">นามสกลุ</th>
             <th scope="col">รูป</th>
             <th scope="col">ลบ</th>
+            <th scope="col">แก้ไข</th>
           </tr>
         </thead>
         <tbody id="tableBody2"></tbody>
